# todolist

./: .dockerignore  .env.py  .gitignore  Dockerfile  Dockerfile.prod  README  docker-compose.yaml  entrypoint.sh  pyproject.toml  requirements.txt
.github/workflows/: deploy_on_maim.yaml  deploy_on_main.yaml  push_any_except_main.yaml
bot/: admin.py  models.py  serializers.py  urls.py  views.py
bot/management/commands/: runbot.py
bot/migrations/: 0001_initial.py
bot/tg/: client.py  schemas.py
core/: serializers.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_alter_user_options.py
deploy/: docker-compose.yaml  nginx.conf
tests/: conftest.py  factories.py
tests/boards/: test_board_create_view.py  test_board_view.py
tests/category/: test_category_view.py
tests/core/: test_core_view.py
todolist/: permissions.py  settings.py  urls.py
todolist/goals/: admin.py  models.py  serializers.py  urls.py  views.py
todolist/goals/migrations/: 0001_add_goals_category_model.py  0002_add_goals__model.py  0003_board_goalcomment_goalcategory_board_and_more.py  0004_create_new_objects.py  0005_alter_goalcategory_board.py
